unpackaged/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>TestNewSupportProcess</fullName>
        <description>from sai</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>TestSupportProcess</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>External_ID__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>Pro__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestPro__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>TestPro__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>Version__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>